D&D 5e Lvl+ Mancer: Spells tab "Level undefined" (UC605)

--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
@@ -15521,6 +15521,13 @@
         let spelldata = settings.spelldata || [];
         let existinglist = settings.existinglist || [];
         let spellnumber = 0;
+        //D&D 5e Lvl+ Mancer: Spells tab "Level undefined" (UC605)
+        //When invoking Lvl+ from an incomplete manually levelled character, an undefined lv is generated due to missing information.
+        //This code prevents an incomplete list from being displayed.
+        //By Miguel
+        ('undefined' in byLevel) {
+          delete byLevel.undefined;
+        }
         _.each(byLevel, function(level) {
             spellnumber += level.length;
         });
