HC SVNT DRACONES Second Edition v1.10: minor sheet fixes, added readme/changelog

--- a/Hc Svnt Dracones Second Edition/hsd2.html
+++ b/Hc Svnt Dracones Second Edition/hsd2.html
@@ -4,7 +4,7 @@
 <input type="radio" name="attr_tab" class="tab tab2" value="2"                  ><span title="Page 2"></span>
 <input type="radio" name="attr_tab" class="tab tab3" value="3"                  ><span title="Page 3"></span>
 
-<span class="version bold">Sheet Version: 1.07</span>
+<span class="version bold">Sheet Version: 1.10</span>
 <!--  ----------------------------------------------------------------------------------------------------------------------- -->
 <!--  ------------------------------------------------- PAGE 1 -------------------------------------------------------------- -->
 <!--  ----------------------------------------------------------------------------------------------------------------------- -->
@@ -311,12 +311,12 @@
 <!-- Inventory: Cargo Points -->
 
   <div class="inv-head section border flex-row">
-    <span>Base Mass <input                       type="number" name="attr_cargo_mass" value="1"></span>
+    <span>Base Mass <input                       type="number" name="attr_mass_base" value="1"></span>
     <span title="Hex Occupation">+Hex Oc. <input type="number" name="attr_cargo_hex"  value="1"></span>
-    <span>+Body Stat <input                      type="number" name="attr_cargo_body" value="1"></span>
+    <span>+Body Exert <input                     type="number" name="attr_body_exert" value="1"></span>
     <span>+/- Misc <input                        type="number" name="attr_cargo_misc" value="1"></span>
-    <span>= Cargo Points <input                  type="number" name="attr_cargo_points" value="(@{cargo_mass}+@{cargo_hex}+@{cargo_body}+@{cargo_misc})" class="txtfield" disabled="true"></span>
-    <span class="small-font">Tiny Object:5 points|Small Object:1 point|Medium Object:3 points|Large Object:5 points|Very LargeObject:8 points</span>
+    <span>= Cargo Points <input                  type="number" name="attr_cargo_points" value="(@{mass_base}+@{cargo_hex}+@{body_exert}+@{cargo_misc})" class="txtfield" disabled="true"></span>
+    <span class="small-font">Tiny Object:5 points |Small Object:1 point |Medium Object:3 points |Large Object:5 points |Very Large Object:8 points</span>
     <span class="small-font">Worn weapons and armor doesn't count</span>
   </div>
 
@@ -324,16 +324,31 @@
 
   <div class="inv-main section border flex-row">
     <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-    <span class="bold">Inventory</span><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-    <span class="bold">Cargo Pts&nbsp;</span>
-    <span class="bold">Gear Sc.&nbsp;</span>
-    <span class="bold">Cost</span>
+    <span class="bold">Inventory</span><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+    <div class="border">
+      <span class="bold">Cargo&nbsp;</span>
+      <br>
+      <span class="bold">Points</span>
+    </div>
+    <div class="border">
+      <span class="bold" title="Quantity">&nbsp;&nbsp;Qty&nbsp;&nbsp;</span>
+      <br>
+      <span class="bold">&nbsp;</span>
+    </div> 
+    <div class="border" title="The Gear Score is meant to represent the total Gear Score for the quantity of items">
+      <span class="bold">&nbsp;Gear&nbsp;&nbsp;</span>
+      <br>
+      <span class="bold">&nbsp;Score&nbsp;</span>
+    </div> 
+    <span class="bold" title="The Cost is meant to represent the total Cost for the quantity of items">&nbsp;Cost</span>
+    <br>
     <hr style="width:100%">
     <fieldset class="repeating_equipment">
-        <input name="attr_equipment"          type="text"  placeholder="Equipment" style="width:405px">
-        <input name="attr_equip_cargo_points" type="number" class="ref" step="any" value="1">
-        <input name="attr_equip_gear_score"   type="number" class="ref" step="any" value="1">
-        <input name="attr_equip_cost"         type="number" class="ref" step="any" value="1">
+        <input name="attr_equipment"            type="text"  placeholder="Equipment">
+        <input name="attr_equip_cargo_points"   type="number" class="ref" step="any" value="1">
+        <input name="attr_equip_cargo_quantity" type="number" class="ref" step="1"   value="1">
+        <input name="attr_equip_gear_score"     type="number" class="ref" step="any" value="1" title="The Gear Score is meant to represent the total Gear Score for the quantity of items">
+        <input name="attr_equip_cost"           type="number" class="ref" step="any" value="1" title="The Cost is meant to represent the total Cost for the quantity of items">
     </fieldset>
   </div>
 
@@ -818,18 +833,18 @@
     <hr>
     <label>Progression Purchase Tracking</label>
 
-    <span class="bold  prog"><input type="number" class="txtfield" name="attr_boons_track"      value="1"> Boons&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-    <span class="bold"><input type="number" class="txtfield" name="attr_focus_track"      value="1"> Focus&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-    <span class="bold"><input type="number" class="txtfield" name="attr_readiness_track"  value="1"> Readiness</span>
+    <span class="bold  prog"><input type="number" class="txtfield" name="attr_boons_track"     value="0"> Boons&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+    <span class="bold"      ><input type="number" class="txtfield" name="attr_focus_track"     value="0"> Focus&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+    <span class="bold"      ><input type="number" class="txtfield" name="attr_readiness_track" value="0"> Readiness</span>
     <br>
     <br>
-    <span class="bold prog"><input type="number" class="txtfield" name="attr_profs_track"      value="1"> Profs&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-    <span class="bold"><input type="number" class="txtfield" name="attr_move_track"       value="1"> Movement</span>
-    <span class="bold"><input type="number" class="txtfield" name="attr_init_track"       value="1"> Initiative</span>
+    <span class="bold prog"><input type="number" class="txtfield" name="attr_profs_track" value="0"> Profs&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+    <span class="bold"     ><input type="number" class="txtfield" name="attr_move_track"  value="0"> Movement</span>
+    <span class="bold"     ><input type="number" class="txtfield" name="attr_init_track"  value="0"> Initiative</span>
     <br>
     <br>
-    <span class="bold prog"><input type="number" class="txtfield" name="attr_techniques_track" value="1"> Techniques&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-    <span class="bold"><input type="number" class="txtfield" name="attr_notoriety_track"  value="1"> Notoriety</span>
+    <span class="bold prog"><input type="number" class="txtfield" name="attr_techniques_track" value="0"> Techniques&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+    <span class="bold"     ><input type="number" class="txtfield" name="attr_notoriety_track"  value="0"> Notoriety</span>
   </div>
 
 <!-- XP milestones -->
