HC SVNT DRACONES Second Edition v1.10: change equipment default values

--- a/Hc Svnt Dracones Second Edition/hsd2.html
+++ b/Hc Svnt Dracones Second Edition/hsd2.html
@@ -345,10 +345,10 @@
     <hr style="width:100%">
     <fieldset class="repeating_equipment">
         <input name="attr_equipment"            type="text"  placeholder="Equipment">
-        <input name="attr_equip_cargo_points"   type="number" class="ref" step="any" value="1">
+        <input name="attr_equip_cargo_points"   type="number" class="ref" step="any" value="">
         <input name="attr_equip_cargo_quantity" type="number" class="ref" step="1"   value="1">
-        <input name="attr_equip_gear_score"     type="number" class="ref" step="any" value="1" title="The Gear Score is meant to represent the total Gear Score for the quantity of items">
-        <input name="attr_equip_cost"           type="number" class="ref" step="any" value="1" title="The Cost is meant to represent the total Cost for the quantity of items">
+        <input name="attr_equip_gear_score"     type="number" class="ref" step="any" value="0" title="The Gear Score is meant to represent the total Gear Score for the quantity of items">
+        <input name="attr_equip_cost"           type="number" class="ref" step="any" value="" title="The Cost is meant to represent the total Cost for the quantity of items">
     </fieldset>
   </div>
 
