add status modifier to attribute roll
add status modifier to attribute roll

--- a/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
@@ -51,7 +51,7 @@
 		</div>
 		<div class="common_header common_header8">
 			<span data-i18n="status">Status</span>
-				<input type="number" name="attr_status_max" value="0" readonly />
+				<input type="number" name="attr_status_maxi" value="0" readonly />
 		</div>
 		<div class="common_header common_header9">
 			<span data-i18n="MU" >MU</span>
@@ -189,49 +189,49 @@
 		<input type="number" name='attr_mut' class='short' value='8'>
 		<input type="number" name='attr_mut_modifier' class='short' value='0'>
 		<input type="number" name='attr_mut_gesamt' class='short' value='0' readonly>
-		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Mut}} {{Probe=[[@{mut_gesamt}+@{mod_option}-1d20cs1cf20]]}}"></button><span class='dee'></span>
+		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Mut}} {{Probe=[[@{mut_gesamt}+@{mod_option}+@{status_maxi}-1d20cs1cf20]]}}"></button><span class='dee'></span>
 
 		<span data-i18n="klugheit">Klugheit</span>
 		<input type="number" name='attr_klugheit' class='short' value='8'>
 		<input type="number" name='attr_klugheit_modifier' class='short' value='0'>
 		<input type="number" name='attr_klugheit_gesamt' class='short' value='0' readonly>
-		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Klugheit}} {{Probe=[[@{klugheit_gesamt}+@{mod_option}-1d20cs1cf20]]}}"></button><span class='dee'></span>
+		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Klugheit}} {{Probe=[[@{klugheit_gesamt}+@{mod_option}+@{status_maxi}-1d20cs1cf20]]}}"></button><span class='dee'></span>
 
 		<span data-i18n="intuition">Intuition</span>
 		<input type="number" name='attr_intuition' class='short' value='8'>
 		<input type="number" name='attr_intuition_modifier' class='short' value='0'>
 		<input type="number" name='attr_intuition_gesamt' class='short' value='0' readonly>
-		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Intuition}} {{Probe=[[@{intuition_gesamt}+@{mod_option}-1d20cs1cf20]]}}"></button><span class='dee'></span>
+		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Intuition}} {{Probe=[[@{intuition_gesamt}+@{mod_option}+@{status_maxi}-1d20cs1cf20]]}}"></button><span class='dee'></span>
 
 		<span data-i18n="charisma">Charisma</span>
 		<input type="number" name='attr_charisma' class='short' value='8'>
 		<input type="number" name='attr_charisma_modifier' class='short' value='0'>
 		<input type="number" name='attr_charisma_gesamt' class='short' value='0' readonly>
-		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Charisma}} {{Probe=[[@{charisma_gesamt}+@{mod_option}-1d20cs1cf20]]}}"></button><span class='dee'></span>
+		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Charisma}} {{Probe=[[@{charisma_gesamt}+@{mod_option}+@{status_maxi}-1d20cs1cf20]]}}"></button><span class='dee'></span>
 
 		<span data-i18n="fingerfertigkeit">Fingerfertigkeit</span>
 		<input type="number" name='attr_fingerfertigkeit' class='short' value='8'>
 		<input type="number" name='attr_fingerfertigkeit_modifier' class='short' value='0'>
 		<input type="number" name='attr_fingerfertigkeit_gesamt' class='short' value='0' readonly>
-		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Fingerfertigkeit}} {{Probe=[[@{fingerfertigkeit_gesamt}+@{mod_option}-1d20cs1cf20]]}}"></button><span class='dee'></span>
+		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Fingerfertigkeit}} {{Probe=[[@{fingerfertigkeit_gesamt}+@{mod_option}+@{status_maxi}-1d20cs1cf20]]}}"></button><span class='dee'></span>
 
 		<span data-i18n="gewandheit">Gewandheit</span>
 		<input type="number" name='attr_gewandheit' class='short' value='8'>
 		<input type="number" name='attr_gewandheit_modifier' class='short' value='0'>
 		<input type="number" name='attr_gewandheit_gesamt' class='short' value='0' readonly>
-		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Gewandheit}} {{Probe=[[@{gewandheit_gesamt}+@{mod_option}-1d20cs1cf20]]}}"></button><span class='dee'></span>
+		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Gewandheit}} {{Probe=[[@{gewandheit_gesamt}+@{mod_option}+@{status_maxi}-1d20cs1cf20]]}}"></button><span class='dee'></span>
 
 		<span data-i18n="konstitution">Konstitution</span>
 		<input type="number" name='attr_konstitution' class='short' value='8'>
 		<input type="number" name='attr_konstitution_modifier' class='short' value='0'>
 		<input type="number" name='attr_konstitution_gesamt' class='short' value='0' readonly>
-		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Konstitution}} {{Probe=[[@{konstitution_gesamt}+@{mod_option}-1d20cs1cf20]]}}"></button><span class='dee'></span>
+		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Konstitution}} {{Probe=[[@{konstitution_gesamt}+@{mod_option}+@{status_maxi}-1d20cs1cf20]]}}"></button><span class='dee'></span>
 
 		<span data-i18n="koerperkraft">Koerperkraft</span>
 		<input type="number" name='attr_koerperkraft' class='short' value='8'>
 		<input type="number" name='attr_koerperkraft_modifier' class='short' value='0'>
 		<input type="number" name='attr_koerperkraft_gesamt' class='short' value='0' readonly>
-		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Körperkraft}} {{Probe=[[@{koerperkraft_gesamt}+@{mod_option}-1d20cs1cf20]]}}"></button><span class='dee'></span>
+		<button class="default" type="roll" value="@{output_option} &{template:DSA-Eigenschaft} {{name=Körperkraft}} {{Probe=[[@{koerperkraft_gesamt}+@{mod_option}+@{status_maxi}-1d20cs1cf20]]}}"></button><span class='dee'></span>
 	</div>
 	<br/>
 	<h3 data-i18n="lebensenergie">Lebensenergie</h3>
@@ -4245,7 +4245,7 @@
 					<tr>
 						<td data-i18n="summe-der-statusmodifikatoren">Summe der Statusmodifikatoren</td>
 						<td>
-						<input name="attr_status_max" type="number" value="0" readonly />
+						<input name="attr_status_maxi" type="number" value="0" readonly />
 						<span data-i18n="max-5">(max. -5) </span>
 					  </td>
 						<td>
@@ -7388,9 +7388,9 @@ on("change:belastung_gesamt change:betaeubung_gesamt change:entrueckung_gesamt c
 		      var trance_gesamt = parseInt(values.trance_gesamt) || 0;
 		      var verwirrung_gesamt = parseInt(values.verwirrung_gesamt) || 0;
 		      var status_gesamt = -1 * (belastung_gesamt + betaeubung_gesamt + entrueckung_gesamt + furcht_gesamt + paralyse_gesamt + schmerz_gesamt + trance_gesamt + verwirrung_gesamt);
-					if (status_gesamt <= -5) {var status_max = -5} else {var status_max = status_gesamt };
+					if (status_gesamt <= -5) {var status_maxi = -5} else {var status_maxi = status_gesamt };
 
-				setAttrs({ status_gesamt: status_gesamt, status_max: status_max });
+				setAttrs({ status_gesamt: status_gesamt, status_maxi: status_maxi });
 			});
 });
 
