Added "none" options for special qualities
Also updated the example picture for the new Special Qualities design.

--- a/Maid RPG/maidrpg.html
+++ b/Maid RPG/maidrpg.html
@@ -312,6 +312,7 @@
 				<div class="specialqualities-box">
 					<div class="specialqualities-section">
 						<select class="attr_charinfo-dropdown" name="attr_specialquality1">
+							<option value="00">None</option>
 							<option value="11">(11) Glasses</option>
 							<option value="12">(12) Freckles</option>
 							<option value="13">(13) Sickly</option>
@@ -353,6 +354,7 @@
 					</div>
 					<div class="specialqualities-section">
 						<select class="attr_charinfo-dropdown" name="attr_specialquality2">
+							<option value="00">None</option>
 							<option value="11">(11) Glasses</option>
 							<option value="12">(12) Freckles</option>
 							<option value="13">(13) Sickly</option>
@@ -394,6 +396,7 @@
 					</div>
 					<div class="specialqualities-section">
 						<select class="attr_charinfo-dropdown" name="attr_specialquality3">
+							<option value="00">None</option>
 							<option value="11">(11) Glasses</option>
 							<option value="12">(12) Freckles</option>
 							<option value="13">(13) Sickly</option>
@@ -805,6 +808,7 @@
 				<div class="specialqualities-box">
 					<div class="specialqualities-section">
 						<select class="attr_charinfo-dropdown" name="attr_specialquality1">
+							<option value="00">None</option>
 							<option value="11">(11) Glasses</option>
 							<option value="12">(12) Sunglasses</option>
 							<option value="13">(13) Furrowed Brows</option>
@@ -846,6 +850,7 @@
 					</div>
 					<div class="specialqualities-section">
 						<select class="attr_charinfo-dropdown" name="attr_specialquality2">
+							<option value="00">None</option>
 							<option value="11">(11) Glasses</option>
 							<option value="12">(12) Sunglasses</option>
 							<option value="13">(13) Furrowed Brows</option>
@@ -887,6 +892,7 @@
 					</div>
 					<div class="specialqualities-section">
 						<select class="attr_charinfo-dropdown" name="attr_specialquality3">
+							<option value="00">None</option>
 							<option value="11">(11) Glasses</option>
 							<option value="12">(12) Sunglasses</option>
 							<option value="13">(13) Furrowed Brows</option>
@@ -1217,6 +1223,7 @@
 				<div class="specialqualities-box">
 					<div class="specialqualities-section">
 						<select class="attr_charinfo-dropdown" name="attr_specialquality1">
+							<option value="00">None</option>
 							<option value="11">(11) Glasses</option>
 							<option value="12">(12) Sickly</option>
 							<option value="13">(13) Royalty</option>
@@ -1258,6 +1265,7 @@
 					</div>
 					<div class="specialqualities-section">
 						<select class="attr_charinfo-dropdown" name="attr_specialquality2">
+							<option value="00">None</option>
 							<option value="11">(11) Glasses</option>
 							<option value="12">(12) Sickly</option>
 							<option value="13">(13) Royalty</option>
@@ -1299,6 +1307,7 @@
 					</div>
 					<div class="specialqualities-section">
 						<select class="attr_charinfo-dropdown" name="attr_specialquality3">
+							<option value="00">None</option>
 							<option value="11">(11) Glasses</option>
 							<option value="12">(12) Sickly</option>
 							<option value="13">(13) Royalty</option>
