add modifier for LE/AE/KE regeneration

--- a/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
@@ -450,6 +450,9 @@
  					 <option value="aw_modifikator">Ausweichen +/-</option>
  					 <option value="gs_modifikator">Geschwindigkeit +/-</option>
  					 <option value="schips_modifikator">Schicksalspunkte +/-</option>
+					 <option value="le_regeneration_mod">Regeneration LE +/-</option>
+					 <option value="ae_regeneration_mod">Regeneration AE +/-</option>
+					 <option value="ke_regeneration_mod">Regeneration KE +/-</option>
  					 </optgroup>
  					  <optgroup label="Kampfsonderfertigkeiten">
  					 <option value="at_sf_mod">Attacke +/-</option>
@@ -636,6 +639,9 @@
 						<option value="aw_modifikator">Ausweichen +/-</option>
 						<option value="gs_modifikator">Geschwindigkeit +/-</option>
 						<option value="schips_modifikator">Schicksalspunkte +/-</option>
+						<option value="le_regeneration_mod">Regeneration LE +/-</option>
+						<option value="ae_regeneration_mod">Regeneration AE +/-</option>
+						<option value="ke_regeneration_mod">Regeneration KE +/-</option>
 						</optgroup>
 						 <optgroup label="Kampfsonderfertigkeiten">
 						<option value="at_sf_mod">Attacke +/-</option>
@@ -821,6 +827,9 @@
 						<option value="aw_modifikator">Ausweichen +/-</option>
 						<option value="gs_modifikator">Geschwindigkeit +/-</option>
 						<option value="schips_modifikator">Schicksalspunkte +/-</option>
+						<option value="le_regeneration_mod">Regeneration LE +/-</option>
+						<option value="ae_regeneration_mod">Regeneration AE +/-</option>
+						<option value="ke_regeneration_mod">Regeneration KE +/-</option>
 						</optgroup>
 						 <optgroup label="Kampfsonderfertigkeiten">
 						<option value="at_sf_mod">Attacke +/-</option>
@@ -6350,6 +6359,15 @@ Baustelle!
 		break;
 		case "schips_modifikator":
 		getAttrs(["schips_modifikator"], function(target_value) {	setAttrs({ schips_modifikator: parseInt(target_value.schips_modifikator) - oldvalue + modifier_value	});	});
+		break;
+		case "le_regeneration_mod":
+		getAttrs(["le_regeneration"], function(target_value) {	setAttrs({ le_regeneration: parseInt(target_value.le_regeneration) - oldvalue + modifier_value	});	});
+		break;
+		case "ae_regeneration_mod":
+		getAttrs(["ae_regeneration"], function(target_value) {	setAttrs({ ae_regeneration: parseInt(target_value.ae_regeneration) - oldvalue + modifier_value	});	});
+		break;
+		case "ke_regeneration_mod":
+		getAttrs(["ke_regeneration"], function(target_value) {	setAttrs({ ke_regeneration: parseInt(target_value.ke_regeneration) - oldvalue + modifier_value	});	});
 		break;
 		case "at_sf_mod":
 		getAttrs(["at_sf_mod"], function(target_value) {	setAttrs({ at_sf_mod: parseInt(target_value.at_sf_mod) - oldvalue + modifier_value	});	});
