adding fields for coins

--- a/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
+++ b/Das_Schwarze_Auge_5_Tsa_Edition/dsa5.html
@@ -5694,6 +5694,25 @@ Baustelle!
 									<td class="padding-1"><input type="radio" name="attr_ruestung_auswahl" value="5"></td>
 	  						</tr>
 	  			</table>
+				<h3 data-i18n="geldbeutel">Geldbeutel</h3>
+				<div class="geldbeutel-grid">
+					<div class="geldbeutel dukaten">
+							<input type="number" name="attr_dukaten" value="0">
+							<span data-i18n="dukaten">Dukaten</span>
+						</div>
+						<div class="geldbeutel silbertaler">
+							<input type="number" name="attr_silbertaler" value="0">
+							<span data-i18n="silbertaler">Silbertaler</span>
+						</div>
+						<div class="geldbeutel heller">
+							<input type="number" name="attr_heller" value="0">
+							<span data-i18n="heller">Heller</span>
+						</div>
+						<div class="geldbeutel kreuzer">
+							<input type="number" name="attr_kreuzer" value="0">
+							<span data-i18n="kreuzer">Kreuzer</span>
+						</div>
+				</div>
 				<h3 data-i18n="inventar">Inventar</h3>
 				<textarea name="attr_inventar"></textarea>
 	</div>
@@ -5703,7 +5722,6 @@ Baustelle!
 <div class="section tab11">
 	<div class="artefakte">
 		<h2 data-i18n="artefakte">Artefakte</h2>
-
 		<div class="zm_gegenstand">
 			<h3 data-i18n="zeremonial-gegenstand">Zeremonialgegenstand</h3>
 			<input type="text" name="attr_zm_gegenstand_name" value="Name"  />
