--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
@@ -1,4 +1,4 @@
-<input type="hidden" name="attr_version" value="2.713">
+<input type="hidden" name="attr_version" value="2.714">
 <input class="monster_confirm_flag" type="hidden" name="attr_monster_confirm_flag">
 <input class="mancer_confirm_flag" type="hidden" name="attr_mancer_confirm_flag">
 <div class="licensecontainer compendium-drop-target monsters">
@@ -9723,7 +9723,10 @@
 
                     if(v["pb_type"] && v["pb_type"] === "die") {
                         atk = atk + "+" + v["pb"];
-                        dc = dc + parseInt(v["pb"].substring(1), 10) / 2;
+                        //Fixing Spell DC when using type Die
+                        //By Miguel
+                        //Used to be equals to: dc + parseInt(v["pb"].substring(1), 10) / 2
+                        dc = dc + "+" + v["pb"];
                     }
                     else {
                         atk = parseInt(atk, 10) + parseInt(v["pb"], 10);
