Mutants & Masterminds 3E: visual fixes for firefox,also tested on chrome

--- a/Mutants and Masterminds 3E/mutants-and-masterminds.html
+++ b/Mutants and Masterminds 3E/mutants-and-masterminds.html
@@ -113,14 +113,14 @@
 				<div class="details-row">
                     <div>
                         <label>Starting Power Points</label>
-    					<label>Power Points Earned</label>
+                        <label>Earned Power Points</label>                           
                         <br />
                         <input type="number" name="attr_starting-power-points" title="starting-power-points" value="0"/>
                         <input type="number" name="attr_power-points-earned" title="power-points-earned" value="0"/>
                     </div>
                     <div>
                         <label>Hero Points</label>
-                        <label>Injuries</label>
+                        <label>Injuries</label>                            
                         <br />
     					<input type="number" name="attr_hero-points" title="hero-points" value="0"/>
     					<input type="number" name="attr_injuries" title="injuries" value="0"/>
@@ -198,15 +198,18 @@
     		</div>
             <br />
             <div class="section-offense">
-            	<b>Offense</b>
-    			<br />
-    			<button type="roll" name="roll_Initiative" title="Initiative" value="@{who-initiative} &{template:default} {{name= @{character_name}'s Initiative}} {{Result: [[@{die_type} + @{initiative} &amp;{tracker}]]}}">Initiative</button>
-    			<input type="number" name="attr_initiative" title="initiative" value="(@{initiative-misc} + @{agility-total})" disabled/>
-    			<b>=</b>
-    			<input type="number" name="attr_initiative-misc" title="initiative-misc" value="0"/></span>
-    			<b>+</b>
-    			<input type="number" name="attr_initiative-ability" title="agility" value="@{agility-total}" disabled/>
-    			<br />
+                <div class="details-row">
+                    <b>Offense</b>
+                </div>
+                <div class="details-row">
+                    <button type="roll" name="roll_Initiative" title="Initiative" value="@{who-initiative} &{template:default} {{name= @{character_name}'s Initiative}} {{Result: [[@{die_type} + @{initiative} &amp;{tracker}]]}}">Initiative</button>
+                    <input type="number" name="attr_initiative" title="initiative" value="(@{initiative-misc} + @{agility-total})" disabled/>
+                    <b>=</b>
+                    <input type="number" name="attr_initiative-misc" title="initiative-misc" value="0"/></span>
+                    <b>+</b>
+                    <input type="number" name="attr_initiative-ability" title="agility" value="@{agility-total}" disabled/>    
+                </div>
+
     			<fieldset class="repeating_attacks">
     				<button class="die-show" type="roll" name="roll_attack-roll" title="repeating_attack_X_attack-roll (NOT USABLE IN MACROS)" value="@{macro-text}"></button>
     				<input type="text" name="attr_name" title="Attack Name" value="Name"/>
