--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
@@ -15538,9 +15538,9 @@
         //When invoking Lvl+ from an incomplete manually levelled character, an undefined lv is generated due to missing information.
         //This code prevents an incomplete list from being displayed.
         //By Miguel
-        ('undefined' in byLevel) {
-          delete byLevel.undefined;
-        }
+        //('undefined' in byLevel) {
+         // delete byLevel.undefined;
+        //}
         _.each(byLevel, function(level) {
             spellnumber += level.length;
         });
