--- a/Mutants and Masterminds 3E/mutants-and-masterminds.html
+++ b/Mutants and Masterminds 3E/mutants-and-masterminds.html
@@ -2,7 +2,13 @@
 <input class="sheet-output-message" type="text" name="attr_output-message" title="output-message" />
 
 <div class="sheet-row">
-    <img src="http://i.imgur.com/LGn0z0t.jpg" title="Mutants and Masterminds Character Sheet"/>
+
+    <!-- Logo -->
+    <img src="https://github.com/Roll20/roll20-character-sheets/tree/master/Mutants%20and%20Masterminds%203E/logo.jpg" title="Mutants and Masterminds Character Sheet"/>
+
+    <!-- --------------- -->
+    <!-- Details Section -->
+    <!-- --------------- -->
     <div class="section-details">
 		<div class="details-row">
     		<b>Hero:</b><input type="text" name="attr_character_name" title="character_name"/>
@@ -48,9 +54,15 @@
 <button class="tab-button" type="action" name="act_powers">Powers, Advantages, & Equipment</button>
 <button class="tab-button" type="action" name="act_options">Options</button>
 
+
+<!-- ------------------------------------- -->
+<!--       Page 1 (Stats & Skills)         -->
+<!-- ------------------------------------- -->
 <div class="sheet-tab-content sheet-tab1">
     <div class="sheet-2colrow">
     	<div class="sheet-col">
+
+            <!-- Abilities -->
 			<div class="section-abilities">
 				<div class="details-row">
                     <label>Name</label>
@@ -109,6 +121,8 @@
 				<input type="hidden" name="attr_total-ability-score" value="(@{strength} + @{agility} + @{fighting} + @{awareness} + @{stamina} + @{dexterity} + @{intellect} + @{presence})" disabled/>
 			</div>
             <br />
+
+            <!-- Power Points -->
 			<div class="section-points">
 				<div class="details-row">
                     <div>
@@ -128,6 +142,8 @@
 				</div>
 			</div>
     		<br />
+
+            <!-- Defense -->
             <div class="section-defenses">
 				<div class="details-row">
                     <label>Defense - Dodge DC</label><input type="number" name="attr_dodge" title="dodge" value="(@{dodge} + 10)" disabled/> 
@@ -197,6 +213,8 @@
 				<input type="hidden" name="attr_total-defense-points" value="(@{dodge-points} + @{parry-points} + @{fortitude-points} + @{toughness-points} + @{will-points})" disabled/>
     		</div>
             <br />
+
+            <!-- Offense -->
             <div class="section-offense">
                 <div class="details-row">
                     <b>Offense</b>
@@ -232,6 +250,8 @@
     			</fieldset>
     		</div>
             <br />
+
+            <!-- Modifiers -->
 			<div class="section-modifiers">
 				<div class="details-row">
 					<label>Name</label>
@@ -278,6 +298,8 @@
 			</div>
         </div>
         <div class="sheet-col">
+
+            <!-- Skills -->
             <div class="sheet-section-skills">
 				<div class="details-row">
 					<label>Name</label>
@@ -488,6 +510,9 @@
                     <input type="number" name="attr_total-skill-ranks" title="total-skill-ranks" value="(@{Acrobatics-ranks} + @{Athletics-ranks} + @{Close-Combat-1-ranks}+ @{Close-Combat-2-ranks} + @{Close-Combat-3-ranks} + @{Deception-ranks} + @{Expertise-1-ranks} + @{Expertise-2-ranks} + @{Expertise-3-ranks} + @{Expertise-4-ranks} + @{Insight-ranks} + @{Intimidation-ranks} + @{Investigation-ranks} + @{Perception-ranks} + @{Persuasion-ranks} + @{Ranged-Combat-1-ranks} + @{Ranged-Combat-2-ranks} + @{Ranged-Combat-3-ranks} + @{Sleight-of-hand-ranks} + @{Stealth-ranks} + @{Technology-ranks} + @{Treatment-ranks} + @{Vehicles-ranks})" disabled/>
 				</div>
             </div>
+            <br />
+
+            <!-- Notes & Conditions -->
             <div class="section-notes">
                 <b>Notes & Conditions</b>
                 <br />
@@ -495,6 +520,8 @@
             </div>
         </div>
     <br />
+
+    <!-- Motivations & Complications -->
     <div class="section-complications">
     	<b>Motivations & Complications</b>
 		<br />
@@ -506,13 +533,17 @@
 	</div>
 </div>
 
+<!-- ---------------------------------- -->
+<!-- Page 2 (Powers, Advantages & Gear) -->
+<!-- ---------------------------------- -->
 <div class="sheet-tab-content sheet-tab2">
     <input type="hidden" name="attr_subtab" class="tab" value="all"/>
     <button type="action" name="act_all">All</button>
     <button type="action" name="act_devices">Powers & Devices</button>
     <button type="action" name="act_advantages">Advantages</button>
     <button type="action" name="act_equipment">Equipment</button>
-        
+    
+    <!-- Powers & Devices -->    
     <div class="sheet-tab-content sheet-tab11 sheet-tab99">
         <div class="section-powers">
         	<label>Powers & Devices</label>
@@ -543,6 +574,8 @@
     	</div>
         <br />
     </div>
+
+    <!-- Advantages --> 
     <div class="sheet-tab-content sheet-tab12 sheet-tab99">
         <div class="section-advantages">
             <b>Advantages</b>
@@ -567,6 +600,8 @@
     	</div>
         <br />
     </div>
+
+    <!-- Equipment, Vehicles, and Headquarters --> 
     <div class="sheet-tab-content sheet-tab13 sheet-tab99">
     	<div class="section-equipment">
     		<b>Equipment, Vehicles, and Headquarters</b>
@@ -580,6 +615,10 @@
         </div>
 	</div>
 </div>
+
+<!-- --------------------------------- -->
+<!--         Page 3 (Options)          -->
+<!-- --------------------------------- -->
 <div class="sheet-tab-content sheet-tab3">
 	<div class="section-import">
 		<b>Options</b>
@@ -652,8 +691,9 @@
 		</div>
 	</div>
 </div>
+
 <div class="sheet-mnm-footer">
-	<img src="http://fyndhal.woobsha.com/SPMM_logo_.png" class="sheet-mnm-logo">
+	<img src="https://github.com/Roll20/roll20-character-sheets/tree/master/Mutants%20and%20Masterminds%203E/logo_powered.png" class="sheet-mnm-logo">
 </div>
 
 
