Updating to support low stats (< 4)
In the rulebook, a 'pang' for example can have a charm value of '1'. I've updated the stats to account for this.

--- a/Feast_of_Legends/feast_of_legends.html
+++ b/Feast_of_Legends/feast_of_legends.html
@@ -139,7 +139,7 @@ stats.forEach(stat => {
           const stat_base = parseInt(values[stat], 10)||0;
           console.log(stat_base);
 
-          if(stat_base == "2" || stat_base == "3" || stat_base == "4"){
+          if(stat_base <= "4"){
             const stat_bonus = "-2"
             setAttrs({
                 [`${stat}_bonus`]: stat_bonus 
